tests/errors/iachar_arg_len_compiletime.f90
program main
   print*, iachar("Hello")
end

